<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/rawDataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raw_data"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/advertisingDataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advertising_data"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/rawDataLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/advertisingDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0x00000000000000000"
                android:textSize="20sp"
                android:background="@drawable/ic_tblr_cell_shape"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/advertisingDataLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/scanResponseDataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_response"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/advertisingDataText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/scanResponseDataText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0x00000000000000000"
                android:textSize="20sp"
                android:background="@drawable/ic_tblr_cell_shape"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@+id/scanResponseDataLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/detailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/scanResponseDataText"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="10dp" />

            <TableLayout
                android:id="@+id/detailsTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/detailsLabel"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="5dp"
                android:stretchColumns="2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">
                    <TextView
                        android:text="@string/len"
                        android:textSize="18sp"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.12"
                        android:background="@drawable/ic_tblr_cell_shape"/>
                    <TextView
                        android:text="@string/type"
                        android:textSize="18sp"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.15"
                        android:background="@drawable/ic_tbr_cell_shape"/>
                    <TextView
                        android:text="@string/value"
                        android:textSize="18sp"
                        android:padding="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:background="@drawable/ic_tbr_cell_shape"/>
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/detailsDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_desc"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/detailsTable"
                app:layout_constraintLeft_toLeftOf="parent" />


            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                app:layout_constraintTop_toBottomOf="@id/detailsDesc"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>